Style changes for product detail page

--- a/scss/atoms/_colors.scss
+++ b/scss/atoms/_colors.scss
@@ -65,8 +65,8 @@ $silver: $clouds, $silverine;
 
 // Brand colors
 
-$brand-primary: $black-2;
-$brand-secondary: nth($grey-light, 2);
+$brand-primary: #000;
+$brand-secondary: #eee;
 $brand-info: nth($blue, 1);
 $brand-alert: nth($red, 1);
 $brand-warning: nth($orange, 1);
