--- a/scss/atoms/_type.scss
+++ b/scss/atoms/_type.scss
@@ -2,6 +2,8 @@
 // Font families
 ////////////////
 $open-sans: "Open sans", sans-serif;
+$futura: "futura light";
+$helvetica: helvetica, arial;
 
 ////////////////
 // Font Size variations
