--- a/scss/molecules/headings/_headings.scss
+++ b/scss/molecules/headings/_headings.scss
@@ -41,6 +41,15 @@
 
 */
 
+@font-face {
+  font-family: futura;
+  src: url("../fonts/Futura-Light.woff");
+}
+
+.highlight {
+  font-weight: bold;
+}
+
 h1, h2, h3, h4 {
   margin: 0;
   // margin-bottom: .5em;
