--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,4 +73,5 @@
 // Import vendor overrides
 
 @import "vendors/medium-editor";
+@import "vendors/handsontable";
 @import "vendors/foundation/foundation";
