Add admin action buttons for sections in product detail page

--- a/scss/atoms/_type.scss
+++ b/scss/atoms/_type.scss
@@ -2,7 +2,7 @@
 // Font families
 ////////////////
 $open-sans: "Open sans", sans-serif;
-$futura: "futura light";
+$futura: "futura";
 $helvetica: helvetica, arial;
 
 ////////////////
