--- a/scss/molecules/tooltips/_tooltips.scss
+++ b/scss/molecules/tooltips/_tooltips.scss
@@ -3,6 +3,8 @@
 /*doc
 #Tooltips
 
+We use tooltipster plugin to achieve tooltips.
+Refer docs here https://github.com/iamceege/tooltipster
 ```
 <button type="button" class="btn btn-primary has-tooltip" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
 
@@ -14,101 +16,101 @@
 ```
 */
 
-.tooltip {
-  position: absolute;
-  z-index: 1030;
-  display: block;
-  font-size: 1em;
-  line-height: 1.4;
-  visibility: visible;
-  filter: alpha(opacity=0);
-  opacity: 0;
-}
-.tooltip.in {
-  filter: alpha(opacity=70);
-  opacity: .7;
-}
-.tooltip.top {
-  padding: 5px 0;
-  margin-top: -3px;
-}
-.tooltip.right {
-  padding: 0 5px;
-  margin-left: 3px;
-}
-.tooltip.bottom {
-  padding: 5px 0;
-  margin-top: 3px;
-}
-.tooltip.left {
-  padding: 0 5px;
-  margin-left: -3px;
-}
-.tooltip-inner {
-  max-width: 200px;
-  padding: .5em;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  background-color: $brand-primary;
-  border-radius: $global-radius;
-}
-.tooltip-arrow {
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-color: transparent;
-  border-style: solid;
-}
-.tooltip.top .tooltip-arrow {
-  bottom: 0;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px 5px 0;
-  border-top-color: #000;
-}
-.tooltip.top-left .tooltip-arrow {
-  bottom: 0;
-  left: 5px;
-  border-width: 5px 5px 0;
-  border-top-color: #000;
-}
-.tooltip.top-right .tooltip-arrow {
-  right: 5px;
-  bottom: 0;
-  border-width: 5px 5px 0;
-  border-top-color: #000;
-}
-.tooltip.right .tooltip-arrow {
-  top: 50%;
-  left: 0;
-  margin-top: -5px;
-  border-width: 5px 5px 5px 0;
-  border-right-color: #000;
-}
-.tooltip.left .tooltip-arrow {
-  top: 50%;
-  right: 0;
-  margin-top: -5px;
-  border-width: 5px 0 5px 5px;
-  border-left-color: #000;
-}
-.tooltip.bottom .tooltip-arrow {
-  top: 0;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 0 5px 5px;
-  border-bottom-color: #000;
-}
-.tooltip.bottom-left .tooltip-arrow {
-  top: 0;
-  left: 5px;
-  border-width: 0 5px 5px;
-  border-bottom-color: #000;
-}
-.tooltip.bottom-right .tooltip-arrow {
-  top: 0;
-  right: 5px;
-  border-width: 0 5px 5px;
-  border-bottom-color: #000;
-}
+// .tooltip {
+//   position: absolute;
+//   z-index: 1030;
+//   display: block;
+//   font-size: 1em;
+//   line-height: 1.4;
+//   visibility: visible;
+//   filter: alpha(opacity=0);
+//   opacity: 0;
+// }
+// .tooltip.in {
+//   filter: alpha(opacity=70);
+//   opacity: .7;
+// }
+// .tooltip.top {
+//   padding: 5px 0;
+//   margin-top: -3px;
+// }
+// .tooltip.right {
+//   padding: 0 5px;
+//   margin-left: 3px;
+// }
+// .tooltip.bottom {
+//   padding: 5px 0;
+//   margin-top: 3px;
+// }
+// .tooltip.left {
+//   padding: 0 5px;
+//   margin-left: -3px;
+// }
+// .tooltip-inner {
+//   max-width: 200px;
+//   padding: .5em;
+//   color: #fff;
+//   text-align: center;
+//   text-decoration: none;
+//   background-color: $brand-primary;
+//   border-radius: $global-radius;
+// }
+// .tooltip-arrow {
+//   position: absolute;
+//   width: 0;
+//   height: 0;
+//   border-color: transparent;
+//   border-style: solid;
+// }
+// .tooltip.top .tooltip-arrow {
+//   bottom: 0;
+//   left: 50%;
+//   margin-left: -5px;
+//   border-width: 5px 5px 0;
+//   border-top-color: #000;
+// }
+// .tooltip.top-left .tooltip-arrow {
+//   bottom: 0;
+//   left: 5px;
+//   border-width: 5px 5px 0;
+//   border-top-color: #000;
+// }
+// .tooltip.top-right .tooltip-arrow {
+//   right: 5px;
+//   bottom: 0;
+//   border-width: 5px 5px 0;
+//   border-top-color: #000;
+// }
+// .tooltip.right .tooltip-arrow {
+//   top: 50%;
+//   left: 0;
+//   margin-top: -5px;
+//   border-width: 5px 5px 5px 0;
+//   border-right-color: #000;
+// }
+// .tooltip.left .tooltip-arrow {
+//   top: 50%;
+//   right: 0;
+//   margin-top: -5px;
+//   border-width: 5px 0 5px 5px;
+//   border-left-color: #000;
+// }
+// .tooltip.bottom .tooltip-arrow {
+//   top: 0;
+//   left: 50%;
+//   margin-left: -5px;
+//   border-width: 0 5px 5px;
+//   border-bottom-color: #000;
+// }
+// .tooltip.bottom-left .tooltip-arrow {
+//   top: 0;
+//   left: 5px;
+//   border-width: 0 5px 5px;
+//   border-bottom-color: #000;
+// }
+// .tooltip.bottom-right .tooltip-arrow {
+//   top: 0;
+//   right: 5px;
+//   border-width: 0 5px 5px;
+//   border-bottom-color: #000;
+// }
