[wip] Include gridster vendor dependency

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,4 +74,5 @@
 
 @import "vendors/medium-editor";
 @import "vendors/handsontable";
+@import "vendors/gridster";
 @import "vendors/foundation/foundation";
