Add color with autocomplete

--- a/scss/pages/_product-detail.scss
+++ b/scss/pages/_product-detail.scss
@@ -141,3 +141,9 @@
   margin-bottom: 1em;
   padding-bottom: .4em;
 }
+
+.product-color-add {
+  display: inline-block;
+  width: 24% !important;
+  margin-right: 1%;
+}
